# blog_drf

./: db.sqlite3  pyproject.toml
accounts/migrations/: 0001_initial.py
posts/migrations/: 0001_initial.py
setup/: settings.py  urls.py
