[tool.poetry]
name = "blog-drf"
version = "0.1.0"
description = ""
authors = ["CodeAkio <siqueira_2004@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
djangorestframework = "^3.15.2"
black = "^24.4.2"
gunicorn = "^22.0.0"
django-cors-headers = "^4.4.0"
dj-rest-auth = "^6.0.0"
django-allauth = "^64.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
